--- a/package.json
+++ b/package.json
@@ -6,13 +6,22 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.3.1",
+    "express": "^4.17.1",
     "flux": "^3.1.3",
+    "mongoose": "^5.9.11",
+    "pg": "^8.0.3",
+    "pg-hstore": "^2.3.3",
     "react": "^16.13.1",
+    "react-confirm-alert": "^2.6.1",
     "react-dom": "^16.13.1",
+    "react-id-generator": "^3.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.4.1",
-    "react-toastify": "^5.1.1"
+    "react-toastify": "^5.1.1",
+    "react-uniqueid": "0.0.2",
+    "sequelize": "^5.21.7"
   },
   "scripts": {
     "start": "run-p start:dev start:api",
